[package]
name = "octopus-near-indexer-s3"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3.5"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
dotenv = "0.15.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
salvo = { version = "^0.16", features = ["full"] }

near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "b14d37f71c5fcfe184d3084b1fe2d14b8f50780f" }
