[package]
name = "octopus-near-indexer-s3"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3.5"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
dotenv = "0.15.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
salvo = { version = "^0.16", features = ["full"] }
sea-query = { version = "^0.24", features = ["sqlx-postgres", "with-json", "with-chrono"] }
sqlx = { version = "^0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "chrono"] }
chrono = "0.4"
once_cell = { version = "^1" }
itertools = "0.9.0"

near-lake-framework = "0.5.0"
